--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,10 @@ dependencies {
     provided "org.grails:grails-dependencies"
     provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    compile('net.greghaines:jesque:1.3.2')
-    compile('redis.clients:jedis:2.6.0')
+    compile('net.greghaines:jesque:2.1.0')
+    compile('redis.clients:jedis:2.7.3')
     compile('joda-time:joda-time:2.5')
+    compile('org.grails.plugins:grails-redis:2.0.2')
 
     testCompile "org.grails:grails-plugin-testing"
 
