--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 buildscript {
-    ext {
-        grailsVersion = project.grailsVersion
-    }
-    repositories {
-        mavenLocal()
-        maven { url "https://repo.grails.org/grails/core" }
-    }
-    dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-    }
+	ext {
+		grailsVersion = project.grailsVersion
+	}
+	repositories {
+		mavenLocal()
+		maven { url "https://repo.grails.org/grails/core" }
+	}
+	dependencies {
+		classpath "org.grails:grails-gradle-plugin:$grailsVersion"
+	}
 }
 
 plugins {
-    id "io.spring.dependency-management" version "0.5.2.RELEASE"
-    id "com.jfrog.bintray" version "1.2"
+	id "io.spring.dependency-management" version "0.5.2.RELEASE"
+	id "com.jfrog.bintray" version "1.2"
 }
 
-version "1.0.2"
+version "1.0.4"
 group "org.grails.plugins"
 
 apply plugin: 'io.spring.dependency-management'
@@ -27,12 +27,12 @@ apply plugin: "spring-boot"
 apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
 // Used for publishing to central repository, remove if not needed
-apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
-apply from:'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
+apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/grailsCentralPublishing.gradle'
+apply from: 'https://raw.githubusercontent.com/grails/grails-profile-repository/master/profiles/plugin/templates/bintrayPublishing.gradle'
 
 ext {
-    grailsVersion = project.grailsVersion
-    gradleWrapperVersion = project.gradleWrapperVersion
+	grailsVersion = project.grailsVersion
+	gradleWrapperVersion = project.gradleWrapperVersion
 }
 
 sourceCompatibility = 1.7
@@ -40,58 +40,65 @@ targetCompatibility = 1.7
 
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url "https://repo.grails.org/grails/core" }
+	mavenLocal()
+	mavenCentral()
+	maven { url "https://repo.grails.org/grails/core" }
 }
 
 dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
+	imports {
+		mavenBom "org.grails:grails-bom:$grailsVersion"
+	}
+	applyMavenExclusions false
 }
 
 dependencies {
-    provided 'org.springframework.boot:spring-boot-starter-logging'
-    provided "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-autoconfigure"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+	provided 'org.springframework.boot:spring-boot-starter-logging'
+	provided "org.springframework.boot:spring-boot-starter-actuator"
+	provided "org.springframework.boot:spring-boot-autoconfigure"
+	provided "org.springframework.boot:spring-boot-starter-tomcat"
 
-    provided "org.grails:grails-web-boot"
-    provided "org.grails:grails-dependencies"
-    provided 'javax.servlet:javax.servlet-api:3.1.0'
+	provided "org.grails:grails-web-boot"
+	provided "org.grails:grails-dependencies"
+	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-    compile('net.greghaines:jesque:2.1.0')
-    compile('redis.clients:jedis:2.7.3')
-    compile('joda-time:joda-time:2.5')
-    compile('org.grails.plugins:grails-redis:2.0.2')
+	compile('org.grails.plugins:grails-redis:2.0.2')
+	compile('net.greghaines:jesque:2.1.0')
+	compile('redis.clients:jedis:2.7.3')
+	compile('joda-time:joda-time:2.5')
 
-    testCompile "org.grails:grails-plugin-testing"
+	testCompile "org.grails:grails-plugin-testing"
 
-    console "org.grails:grails-console"
+	console "org.grails:grails-console"
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapperVersion
+	gradleVersion = gradleWrapperVersion
 }
 
 bintray {
-    user = System.getenv("BINTRAY_USER") ?: project.hasProperty("bintrayUser") ? project.bintrayUser : ''
-    key = System.getenv("BINTRAY_KEY") ?: project.hasProperty("bintrayKey") ? project.bintrayKey : ''
-    publications = ['maven']
-    pkg {
-        repo = 'grails-plugins'
-        userOrg = 'ctoestreich'
-        name = "org.grails.plugins:grails-jesque"
-        desc = "Grails Jesque Plugin"
-        websiteUrl = "http://grails.org/plugin/grails-jesque"
-        issueTrackerUrl = "https://github.com/Grails-Plugin-Consortium/grails-jesque/issues"
-        vcsUrl = "https://github.com/Grails-Plugin-Consortium/grails-jesque"
-        licenses = ['Apache-2.0']
-        publicDownloadNumbers = true
-    }
+	user = System.getenv("BINTRAY_USER") ?: project.hasProperty("bintrayUser") ? project.bintrayUser : ''
+	key = System.getenv("BINTRAY_KEY") ?: project.hasProperty("bintrayKey") ? project.bintrayKey : ''
+	publications = ['maven']
+	pkg {
+		repo = 'grails-plugins'
+		userOrg = 'ctoestreich'
+		name = "org.grails.plugins:grails-jesque"
+		desc = "Grails Jesque Plugin"
+		websiteUrl = "http://grails.org/plugin/grails-jesque"
+		issueTrackerUrl = "https://github.com/Grails-Plugin-Consortium/grails-jesque/issues"
+		vcsUrl = "https://github.com/Grails-Plugin-Consortium/grails-jesque"
+		licenses = ['Apache-2.0']
+		publicDownloadNumbers = true
+	}
+}
+
+test {
+	testLogging {
+		exceptionFormat = 'full'
+		showStandardStreams = true
+	}
 }
 
 
-bintrayUpload.dependsOn build, sourcesJar, javadocJar
+bintrayUpload.dependsOn jar, sourcesJar, javadocJar
