--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 	id "com.jfrog.bintray" version "1.2"
 }
 
-version "1.0.7"
+version "1.0.8"
 group "org.grails.plugins"
 
 apply plugin: 'io.spring.dependency-management'
@@ -62,7 +62,7 @@ dependencies {
 	provided "org.grails:grails-dependencies"
 	provided 'javax.servlet:javax.servlet-api:3.1.0'
 
-	compile('org.grails.plugins:grails-redis:2.0.2')
+	compile('org.grails.plugins:redis:2.0.4')
 	compile('net.greghaines:jesque:2.1.0')
 	compile('redis.clients:jedis:2.7.3')
 	compile('joda-time:joda-time:2.5')
